<resources>
    <string name="app_name">TipTime</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="amazing_button">Amazing(20%)</string>
    <string name="good_button">Good(18%)</string>
    <string name="okay_button">Okay(15%)</string>
    <string name="cost_of_service">Cost of service</string>
    <string name="round_trip">Round Trip</string>
    <string name="calculate_button">Calculate</string>
    <string name="tip_amount">Tip amount %s</string>
</resources>